Se  finaliza la clase test y batch de pokemon

--- a/force-app/main/default/classes/PokemonPokeBatch.cls
+++ b/force-app/main/default/classes/PokemonPokeBatch.cls
@@ -2,7 +2,7 @@ global class PokemonPokeBatch implements Database.Batchable<Integer>, Database.A
     global List <Integer> start(Database.BatchableContext bc) {
 
         List<Integer> indexList = new List<Integer>();
-        for (Integer i = 1; i <= 1; i++) {
+        for (Integer i = 1; i <= 898; i++) {
             indexList.add(i);
         }
         return indexList;
@@ -29,10 +29,17 @@ global class PokemonPokeBatch implements Database.Batchable<Integer>, Database.A
             pokemon.Image__c = (String)sprites.get('front_default');
             
             List<Object> types = (List<Object>)result.get('types');
+            System.debug(types.size());
             for (Integer i =0; i <= types.size() - 1; i++) {
-                Map<String, Object> typesPath = (Map<String, Object>)types[i];
-                Map<String, Object> type = (Map<String, Object>)typesPath.get('type');
-                pokemon.Types__c = pokemon.Types__c + ';' + (String)type.get('name');
+                if (i == 0) {
+                    Map<String, Object> typesPath = (Map<String, Object>)types[i];
+                    Map<String, Object> type = (Map<String, Object>)typesPath.get('type');
+                    pokemon.Types__c = (String)type.get('name') + ';';
+                } else {
+                    Map<String, Object> typesPath = (Map<String, Object>)types[i];
+                    Map<String, Object> type = (Map<String, Object>)typesPath.get('type');
+                    pokemon.Types__c = pokemon.Types__c + ';' + (String)type.get('name');
+                }
                 
             }
 
@@ -55,30 +62,34 @@ global class PokemonPokeBatch implements Database.Batchable<Integer>, Database.A
             }
 
             List<Object> abilities = (List<Object>)result.get('abilities');
-            Integer randomNum =(Math.random() > 0.5) ? 1 : 0;
-            Map<String, Object> abilitiesPath = (Map<String, Object>)abilities[randomNum];
-            Map<String, Object> ability = (Map<String, Object>)abilitiesPath.get('ability');
-            String UpperNameAbility = (String) ability.get('name');
-
-            Abilities__c lookupAbility = [SELECT Id FROM Abilities__c WHERE Name = :UpperNameAbility];
-            pokemon.Ability__c = lookupAbility.Id;
-
+            if (abilities.size() == 1) {
+                Map<String, Object> abilitiesPath = (Map<String, Object>)abilities[0];
+                Map<String, Object> ability = (Map<String, Object>)abilitiesPath.get('ability');
+                String UpperNameAbility = (String) ability.get('name');
+                Abilities__c lookupAbility = [SELECT Id FROM Abilities__c WHERE Name = :UpperNameAbility];
+                pokemon.Ability__c = lookupAbility.Id;
+            } else {       
+                Integer randomNum =(Math.random() > 0.5) ? 1 : 0;
+                Map<String, Object> abilitiesPath = (Map<String, Object>)abilities[randomNum];
+                Map<String, Object> ability = (Map<String, Object>)abilitiesPath.get('ability');
+                String UpperNameAbility = (String) ability.get('name');
+                Abilities__c lookupAbility = [SELECT Id FROM Abilities__c WHERE Name = :UpperNameAbility];
+                pokemon.Ability__c = lookupAbility.Id;
+            }
+            
 
             List<Object> moves = (List<Object>)result.get('moves');
-            Integer movesIndex = moves.size() - 1;
-/*             Integer randomMoveIndex = Math.round(Math.random() * movesIndex);
-            Map<String, Object> movesPath = (Map<String, Object>)moves[randomMoveIndex];
-            Map<String, Object> move = (Map<String, Object>)abilitiesPath.get('move');
-            String UpperNameMoves = (String) move.get('name'); */
+            Integer movesIndex = moves.size() -1 == 0 ? moves.size() : moves.size() -1 ;
 
+            Integer roundCount = 0;
             if (movesIndex >= 4) {
                 for (Integer n =0; n<= 3; n++) {
-                    Integer roundCount = 0;
                     Integer randomMoveIndex = Math.round(Math.random() * movesIndex);
                     Map<String, Object> movesPath = (Map<String, Object>)moves[randomMoveIndex];
-                    Map<String, Object> move = (Map<String, Object>)abilitiesPath.get('move');
+                    Map<String, Object> move = (Map<String, Object>)movesPath.get('move');
                     String UpperNameMoves = (String) move.get('name');
                     Moves__c lookupMove = [SELECT Id FROM Moves__c WHERE Name = :UpperNameMoves];
+
                     
                     if (roundCount == 0) {
                         pokemon.Slot1__c = lookupMove.Id;
@@ -94,17 +105,12 @@ global class PokemonPokeBatch implements Database.Batchable<Integer>, Database.A
                         roundCount++;
                     }
                 } 
-/*                 Integer randomMoveIndex = Math.round(Math.random() * movesIndex);
-                Map<String, Object> movesPath = (Map<String, Object>)movements[randomMoveIndex];
-                Map<String, Object> move = (Map<String, Object>)abilitiesPath.get('move');
-                String UpperNameMoves = (String) move.get('name');
-                pokemon.Slot1__c = UpperNameMoves; */
+
             } else if (movesIndex == 3) {
                 for (Integer n =0; n<= 2; n++) {
-                    Integer roundCount = 0;
                     Integer randomMoveIndex = Math.round(Math.random() * movesIndex);
                     Map<String, Object> movesPath = (Map<String, Object>)moves[randomMoveIndex];
-                    Map<String, Object> move = (Map<String, Object>)abilitiesPath.get('move');
+                    Map<String, Object> move = (Map<String, Object>)movesPath.get('move');
                     String UpperNameMoves = (String) move.get('name');
                     Moves__c lookupMove = [SELECT Id FROM Moves__c WHERE Name = :UpperNameMoves];
 
@@ -123,10 +129,9 @@ global class PokemonPokeBatch implements Database.Batchable<Integer>, Database.A
                 
             }else if (movesIndex == 2) {
                 for (Integer n =0; n<= 1; n++) {
-                    Integer roundCount = 0;
                     Integer randomMoveIndex = Math.round(Math.random() * movesIndex);
                     Map<String, Object> movesPath = (Map<String, Object>)moves[randomMoveIndex];
-                    Map<String, Object> move = (Map<String, Object>)abilitiesPath.get('move');
+                    Map<String, Object> move = (Map<String, Object>)movesPath.get('move');
                     String UpperNameMoves = (String) move.get('name');
                     Moves__c lookupMove = [SELECT Id FROM Moves__c WHERE Name = :UpperNameMoves];
 
@@ -142,10 +147,9 @@ global class PokemonPokeBatch implements Database.Batchable<Integer>, Database.A
                 
             }else if (movesIndex == 1) {
                 for (Integer n =0; n<= 0; n++) {
-                    Integer roundCount = 0;
                     Integer randomMoveIndex = Math.round(Math.random() * movesIndex);
                     Map<String, Object> movesPath = (Map<String, Object>)moves[randomMoveIndex];
-                    Map<String, Object> move = (Map<String, Object>)abilitiesPath.get('move');
+                    Map<String, Object> move = (Map<String, Object>)movesPath.get('move');
                     String UpperNameMoves = (String) move.get('name');
                     Moves__c lookupMove = [SELECT Id FROM Moves__c WHERE Name = :UpperNameMoves];
 
@@ -159,8 +163,6 @@ global class PokemonPokeBatch implements Database.Batchable<Integer>, Database.A
                 
                 insert pokemon;         
             }
-/* VER PORQUE NO ANDA, ME TIRA SUCCESS AL LLAMAR AL BATCH PERO NO INSERTA EL 
-REGISTRO, REVISAR SI ES UN TEMA DEL REGISTRO O DEL INSERCION, POTENCIALMENTE LOS PROBLEMAS ESTAN EN LA INSERCION DE LOS OBJETOS RELACIONADOS */
 
         else {
             System.debug(response.getStatusCode());
